# PreludePlus

./: .gitignore  CMakeLists.txt
Infrastructure/: CmakeLists.txt  breakpad.cpp  crypto.cpp  dummy.cpp  images.cpp
Infrastructure/include/Infrastructure/: breakpad.h  exception.h  location.h  logging.h
Infrastructure/include/graphics/: device.h  mdfmaterials.h
PTD/: CMakeLists.txt
PTD/include/ptd/: dll.h
PTD/src/: dll.cpp
PreludePlus/: CMakeLists.txt  PreludePlus.cpp  PreludePlus.h  engine.cpp  gfx.cpp  input_system.cpp  sound_engine.cpp
PreludePlus/include/: engine.h  gfx.h  input_system.h  meshes.h  sound_engine.h
PreludePlus/util/: fixes.cpp
dependencies/: CMakeLists.txt
dependencies/include/: crash_reporting.h
dependencies/lib/: minhook.lib  minhook_d.lib  turbojpeg-static.lib  turbojpeg-static_d.lib  zlib.lib  zlibd.lib  zlibstatic.lib  zlibstaticd.lib
